--- a/src/main/resources/templates/seeds/seed.html
+++ b/src/main/resources/templates/seeds/seed.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-<main>
+<main th:unless="${seed.generated}">
     <h1>Your seed is almost ready!</h1>
     <p>Your seed has been created but has not been generated yet. You can see the status of the generator below.</p>
 
