--- a/src/main/resources/templates/seeds/generator_form.html
+++ b/src/main/resources/templates/seeds/generator_form.html
@@ -34,6 +34,9 @@
         <fieldset>
             <legend>Spoiler log settings</legend>
             <div>
+                <ul th:if="${#fields.hasErrors('unlockMode')}">
+                    <li th:errors="*{unlockMode}">Error message</li>
+                </ul>
                 <div>
                     <input type="radio" id="opt-spoiler-unlocked" required
                            th:field="*{unlockMode}"
@@ -57,6 +60,10 @@
                     </label>
 
                     <div id="racetime-url-container">
+                        <ul th:if="${#fields.hasErrors('racetimeUrl')}">
+                            <li th:errors="*{racetimeUrl}">Error message</li>
+                        </ul>
+
                         <label for="racetime-url-input">Racetime.gg race URL</label>
                         <input type="url" id="racetime-url-input"
 
