frontend: add welcome message to the generator form

--- a/src/main/resources/templates/seeds/generator_form.html
+++ b/src/main/resources/templates/seeds/generator_form.html
@@ -23,6 +23,22 @@
 <main>
     <form method="post" th:action="@{/seeds/generate}" th:object="${form}">
         <h1>Generate a Triforce Blitz seed</h1>
+
+        <p>Welcome to the <strong>pre-release, early alpha, in development</strong> web generator
+            for Triforce Blitz. This new generator is a technical preview to showcase the much
+            improved backend. You will find seeds generate faster and the general user experience
+            improved.
+            <strong>Expect bugs and issues, and please report them to use over on Discord!</strong>
+        </p>
+
+        <p>You may also find the generator changing very suddenly, that is because the generator
+            is using the latest version of the code over on
+            <a href="https://github.com/jessebrands/triforce-blitz">GitHub</a>
+            and will automatically update whenever I push code to it.
+        </p>
+
+        <p>Thank <em>you</em> for trying out the new Web Generator! &hearts;</p>
+
         <fieldset>
             <legend>Generator settings</legend>
             <div>
