frontend: grammar and spelling corrections

--- a/src/main/resources/templates/seeds/generator_form.html
+++ b/src/main/resources/templates/seeds/generator_form.html
@@ -28,7 +28,10 @@
             for Triforce Blitz. This new generator is a technical preview to showcase the much
             improved backend. You will find seeds generate faster and the general user experience
             improved.
-            <strong>Expect bugs and issues, and please report them to use over on Discord!</strong>
+            <strong>
+                Expect bugs and issues, and please report them to us over on
+                <a href="https://discord.gg/pZx9cpM7D2">Discord</a>!
+            </strong>
         </p>
 
         <p>You may also find the generator changing very suddenly, that is because the generator
@@ -37,7 +40,7 @@
             and will automatically update whenever I push code to it.
         </p>
 
-        <p>Thank <em>you</em> for trying out the new Web Generator! &hearts;</p>
+        <p>Thank <em>you</em> for trying out the new web generator! &hearts;</p>
 
         <fieldset>
             <legend>Generator settings</legend>
