seeds: disable generating solo seeds

--- a/src/main/resources/templates/seeds/generator_form.html
+++ b/src/main/resources/templates/seeds/generator_form.html
@@ -45,7 +45,7 @@
         <fieldset>
             <legend>Generator settings</legend>
             <div>
-                <input type="checkbox" id="cooperative-checkbox" th:field="*{cooperative}"/>
+                <input type="checkbox" id="cooperative-checkbox" th:field="*{cooperative}" disabled/>
                 <label for="cooperative-checkbox">Generate a co-op seed</label>
             </div>
         </fieldset>
